fixtures/frontend/milestone-2/valid/pipe-explicit-recurrence-wakeups/main.aivi
domain Duration over Int
    literal sec : Int -> Duration

domain Retry over Int
    literal rt : Int -> Retry

fun step x =>
    x

@recur.timer 5sec
signal polled : Signal Int =
    0
     @|> step
     <|@ step

@recur.backoff 3rt
value retried : Task Int Int =
    0
     @|> step
     <|@ step
