fixtures/frontend/milestone-2/invalid/missing-recurrence-wakeup/main.aivi
fun step #value =>
    value

sig broken : Signal Int =
    0
     @|> step
     <|@ step
